<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.tretton37.twitter37.ui.home.tweetsscreen.TweetsViewModel" />
    </data>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/srl_tweets"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_tweets"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

    </android.support.v4.widget.SwipeRefreshLayout>

</layout>